--- a/potd.html
+++ b/potd.html
@@ -11,12 +11,15 @@
       <p><br>Click the link below, as it may hold the answers you're looking for...</p>
       <p style="font-size:8px; line-height:0.5">...or just things the guy who made this site happens to like/find interestingi</p>
     </div>
-    
-
-
-    <div style="position: absolute; top:50%; right:44%">
+    <!--
       <a href="https://www.therealzebos.com/goldenticket" target="_blank" title="such mystique, you must click!" style="color:#FFFFFF">the almighty link.</a>
-    </div>
+      -->
+    <script>
+      function hello(){
+        document.write("Hello");
+      }
+    </script>
+    <a onclick="hello()" title="such mystique, you must click!" style="color:#FFFFFF">the almighty link.</a>
   
-  </body>
+    </body>
 </html>
