--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="../no_style.css">
+  </head>
   <p>Almonds_Demo_101.zip</p>
 
   <!-- yadda yadda yadda rada rada rada-->
