--- a/potd.html
+++ b/potd.html
@@ -9,7 +9,7 @@
   
     <div style="text-align: center">
       <p><br>Click the link below, as it may hold the answers you're looking for...</p>
-      <p style="font-size:8px; line-height:0.5">...or just things the guy who made this site happens to like/find interestingi</p>
+      <p style="font-size:8px; line-height:0.5">...or just things the guy who made this site happens to like/find interesting</p>
     </div>
     <!--
       <a href="https://www.therealzebos.com/goldenticket" target="_blank" title="such mystique, you must click!" style="color:#FFFFFF">the almighty link.</a>
