--- a/404.html
+++ b/404.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <h1>404, BITCH<h1>
+  <head>
+    <meta charset="utf-8">
+    <link rel="sytlesheet.css" href="no_style.css">
+    <title>Where the hell.</title>
+  </head>
+  <body>
+    <h1 style="text-align: center;`">You've lost your nut...</h1>
+  </body>
 </html>
