--- a/complete.html
+++ b/complete.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="no_style.css">
     <title>Almonds Website?!?!</title>
     <a style="color:#1F2229; text-decoration: underline;" href="potd.html">obligatory easter egg on plain HTML site</a>
