--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>You'll Get Your Nut Soon...</title>
     <h1 style="font-family: monaco; text-align: center; color:#FFFFFF">Coming soon...</h1>
   </head>
