--- a/clear_save.html
+++ b/clear_save.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="no_style.css">
     <title>Meet Them All</title>
     <style>
