--- a/potd.html
+++ b/potd.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head> 
+  <head>
+    <meta charset="utf-8">
     <title>Ooh, what's this?</title>
     <h1 style="font-family: monaco; text-align: center; color:#FFFFFF">Page of the Day!</h1>
   </head>
