Fixed stupid ass mistake of adding '.css' at the end of 'stylesheet'

--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="sytlesheet.css" href="no_style.css">
+    <link rel="sytlesheet" href="no_style.css">
     <title>Where the hell.</title>
   </head>
   <body>
