--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="no_style.css">
     <title>Where the hell.</title>
   </head>
