--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- <meta name="viewport" content="width=device-width, intial-scale=1.0"> -->
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="stylesheet" href="no_style.css">
     <title>You'll Get Your Nut Soon...</title>
-    <h1 style=" ; text-align: center; color:#FFFFFF">Coming soon...</h1>
+    <h1 style="text-align: center; color:#FFFFFF">Coming soon...</h1>
   </head>
 
   <body style="max-width: 100%; max-height: 0%;  ; background-color:#1F2229; color:#1F2229">
