--- a/potd.html
+++ b/potd.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="stylesheet" href="no_style.css">
     <title>Ooh, what's this?</title>
     <h1 style="text-align: center; color:#FFFFFF">Page of the Day!</h1>
   </head>
@@ -32,7 +34,7 @@
       }
     </script>
     <div style="display: flex; justify-content: center; padding-top: 13%">
-    <a href="" onclick="javascrip:sorpresa();" title="such mystique, you must click!"><span style="color:#FFFFFF; text-decoration: underline;">the almighty link.</span></a>
+    <a href="" onclick="javascript:sorpresa();" title="such mystique, you must click!"><span style="color:#FFFFFF; text-decoration: underline;">the almighty link.</span></a>
     </div>
     </body>
 </html>
