--- a/complete.html
+++ b/complete.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <title>Almonds Website?!?!</title>
-    <a style="color:#1F2229; text-decoration: underline;" href="potd.html">obligatory easter egg on plain HTML site</a>
+    <a style="color:#1C1F24; text-decoration: underline;" href="potd.html">obligatory easter egg on plain HTML site</a>
     <h3 style=" text-align: center;">Almonds</h3>
   </head>
 
