--- a/clear_save.html
+++ b/clear_save.html
@@ -14,7 +14,7 @@
         margin-left: 30px;
         border-color: #1F2229;
       }
-      a {text-decoration: underline;}
+      a {font-size: 10px; text-decoration: underline;}
       p {line-height:0.5;}
       h2 {display: inline-block; padding-left: 270px;}
       div {border-style: solid; border-width: 1.5px; border-color: white;}
@@ -28,10 +28,11 @@
 
     <h2 style="line-height:0.1; color:#6975F7">Jose&nbsp</h2>
     <p id="parenthesis">(</p>
-      <a href="https://instagram.com/_jxse_._/" target="_blank" style="font-size: 10px; color:#FFFFFF">instagram</a>
+      <a href="https://instagram.com/_jxse_._/" target="_blank" style="color:#FFFFFF">instagram</a>
     <p id="parenthesis">)</p>
 
-    <div style="margin-left:270px; width:802px;">
+    <!-- in pixels: 802px -->
+    <div style="margin-left:270px; width:59.6%;">
       <div id="desc">
       <p>Credit:</p>
       <p style="padding-left:20px; line-height:0.3; font-size:14px">He's in the game as Jose!</p>
@@ -39,13 +40,14 @@
       <p style="font-size:15px"><br>Test description, words words words.</p>
       </div>
     </div>
+    <!-- <div style="margin-left:270px; width: 802px; height; 200"><p>.</p></div> -->
  
     <!-- DIEGO -->
 
     <h2 style="color:#A04AF6"><br>ME.&nbsp&nbsp</h2>
       <p id="parenthesis">(</p>
-        <a href="https://instagram.com/the_69th_random_person/" target="_blank" style="font-size: 10px; color:#FFFFFF">instagram,</a>
-        <a href="https://www.youtube.com/@the_person" target="_blank" style="font-size: 10px; color:#FFFFFF">youtube</a>
+        <a href="https://instagram.com/the_69th_random_person/" target="_blank" style="color:#FFFFFF">instagram,</a>
+        <a href="https://www.youtube.com/@the_person" target="_blank" style="color:#FFFFFF">youtube</a>
       <p id="parenthesis">)</p>
   </body>
 </html>
