--- a/clear_save.html
+++ b/clear_save.html
@@ -16,7 +16,7 @@
       }
       a {font-size: 10px; text-decoration: underline;}
       p {line-height:0.5;}
-      h2 {display: inline-block; padding-left: 270px;}
+      h2 {display: inline-block; padding-left: 20.1%;}
       div {border-style: solid; border-width: 1.5px; border-color: white;}
     </style>
     <h1 style="text-align:center">Credits</h1>
@@ -32,7 +32,7 @@
     <p id="parenthesis">)</p>
 
     <!-- in pixels: 802px -->
-    <div style="margin-left:270px; width:59.6%;">
+    <div style="margin-left:20.1%; width:59.6%;">
       <div id="desc">
       <p>Credit:</p>
       <p style="padding-left:20px; line-height:0.3; font-size:14px">He's in the game as Jose!</p>
@@ -40,8 +40,7 @@
       <p style="font-size:15px"><br>Test description, words words words.</p>
       </div>
     </div>
-    <!-- <div style="margin-left:270px; width: 802px; height; 200"><p>.</p></div> -->
- 
+    
     <!-- DIEGO -->
 
     <h2 style="color:#A04AF6"><br>ME.&nbsp&nbsp</h2>
