--- a/complete.html
+++ b/complete.html
@@ -13,8 +13,8 @@
     <div style="" class="container">
       <div style="line-height: 1.5; text-align: center; color:#FFFFFF">
         <p style="padding-right: 5.7%; color:#8CF516;"><br>Ver: 1.0.1</p>
-          <style> p {padding-right: 2.14%;} </style>
-          <a href="downloads/Almonds_Demo_101.zip" download="Almonds_Demo_100" style="padding-right: 3.5%">1.&nbsp;New Game<br></a>
+          <style> pre {padding-right: 2.14%;} </style>
+          <a href="downloads/Almonds_Demo_101.zip" download="Almonds_Demo_100">1.&nbsp;New Game<br></a>
           <a href="clear_save.html" style="padding-right:2.1%">2. Clear Save<br></a>
           <a href="https://discord.com/invite/8NyNWJcfHA" style="padding-right: 6.3%">3.&nbsp;Quit<br></a>
       </div>
@@ -22,5 +22,6 @@
       <p style="line-height: 1.3; text-align: center;"><br>What would you like to do? (click on options)</p>   
     </div>
   </body>
-
+  <!-- main test -->
+  <!-- pre test -->
 </html>
