--- a/complete.html
+++ b/complete.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
+    <style>
+      ul { list-style-type: none; margin: 0; padding-left:44.32%;}
+      li a {display: block; width: 30%;}
+    </style>
+
     <title>Almonds Website?!?!</title>
     <a style="color:#1C1F24; text-decoration: underline;" href="potd.html">obligatory easter egg on plain HTML site</a>
     <h3 style=" text-align: center;">Almonds</h3>
@@ -11,12 +16,15 @@
 
   <body>
     <div style="" class="container">
-      <div style="line-height: 1.5; text-align: center; color:#FFFFFF">
-        <p style="padding-right: 5.7%; color:#8CF516;"><br>Ver: 1.0.1</p>
-          <style> p {padding-right: 2.14%;} </style>
-          <a href="downloads/Almonds_Demo_101.zip" download="Almonds_Demo_100" style="padding-right: 3.5%">1.&nbsp;New Game<br></a>
-          <a href="clear_save.html" style="padding-right:2.1%">2. Clear Save<br></a>
-          <a href="https://discord.com/invite/8NyNWJcfHA" style="padding-right: 6.4%">3.&nbsp;Quit<br></a>
+      <div style="line-height: 1.5; color:#FFFFFF">
+        <p style="padding-right: 5.7%; text-align: center; color:#8CF516;"><br>Ver: 1.0.1</p>
+        
+        <ul>
+          <li><a href="downloads/Almonds_Demo_101.zip" download="Almonds_Demo_100">1.&nbsp;New Game<br></a></li>
+          <li><a href="clear_save.html">2. Clear Save<br></a></li>
+          <li><a href="https://discord.com/invite/8NyNWJcfHA">3.&nbsp;Quit<br></a><li>
+        </ul>
+        <!-- 1: 3.5%  2: 2.1%  3: 6.4%-->
       </div>
       
       <p style="line-height: 1.3; text-align: center;"><br>What would you like to do? (click on options)</p>   
