--- a/potd.html
+++ b/potd.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <title>Ooh, what's this?</title>
+    <div style="border-style: solid; border-color: white; border-width: 1.5px; width: 50%; display: flex; justify-content: center; margin: auto;">
     <h1 style="text-align: center; color:#FFFFFF">Page of the Day!</h1>
+    </div>
   </head>
 
   <body style="background-color:#1F2229; color:#FFFFFF">
   
     <div style="text-align: center">
-      <p><br>Click the link below, as it may hold the answers you're looking for...</p>
+      <p>Click the link below, as it may hold the answers you're looking for...</p>
       <p style="font-size:8px; line-height:0">...or just things the guy who made this site happens to like/find interesting</p>
       <p style="font-size:4px; line-height:1">...or he just hates it idk</p>
     </div>
