uhhh stuff i think

--- a/potd.html
+++ b/potd.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <title>Ooh, what's this?</title>
-    <div style="border-style: solid; border-color: white; border-width: 1.5px; width: 50%; display: flex; justify-content: center; margin: auto;">
+    <div style="border: 1.5px solid white; width: 50%; display: flex; justify-content: center; margin: auto;">
     <h1 style="text-align: center; color:#FFFFFF">Page of the Day!</h1>
     </div>
   </head>
