--- a/clear_save.html
+++ b/clear_save.html
@@ -17,7 +17,7 @@
       a {font-size: 10px; text-decoration: underline;}
       p {line-height:0.5;}
       h2 {display: inline-block; padding-left: 20.1%;}
-      div {border-style: solid; border-width: 1.5px; border-color: white;}
+      div {border: 1.5px solid white;}
     </style>
     <h1 style="text-align:center">Credits</h1>
   </head>
