--- a/clear_save.html
+++ b/clear_save.html
@@ -7,13 +7,14 @@
     <base target="_blank">
     <title>Meet Them All</title>
     <!-- 30 px for desc-->
+    <!-- 20.1% margin left orig-->
     <style> 
       p {line-height:0.5;}
       h2 {display: inline-block; padding-left: 20.1%; font-size: 1.7vw;}
       div {border: 1.5px solid white;}
       
       #descContainer {
-        margin-left:20.1%;
+        margin-left:10.1%;
         width:59.6%;
       }
 
@@ -45,7 +46,7 @@
         }
         
         #descSep {
-          line-height: 1vw;
+          line-height: 1.5vw;
         }
 
         #descTxt {
