--- a/clear_save.html
+++ b/clear_save.html
@@ -121,7 +121,7 @@
       <div id="desc">
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
-          <span id="categoryTxt">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
+          <span id="categoryTxt"><br>He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
           <p id="descTxt"><br>Test description, words words words.</p>
         </p>
       </div>
