--- a/clear_save.html
+++ b/clear_save.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" href="no_style.css">
     <base target="_blank">
     <title>Meet Them All</title>
-    <!-- 30 px for desc-->
-    <!-- 20.1% margin left orig-->
-      <!---->
-    <style> 
+    <style>
+
       p {line-height:0.5;}
       div {border: 1.5px solid white;}
       
@@ -42,7 +40,7 @@
           font-size: 3.2vw;
         }
 
-        #categoryTxt {
+        #categoryMob {
           font-size: 3vw;
           padding-left: 1.5vw;
           line-height: 4.7vw;
@@ -87,7 +85,7 @@
           font-size: 1.3vw;
         }
       
-        #categoryTxt {
+        #categoryDesk {
           font-size: 1.03vw;
           padding-left: 1vw;
         }
@@ -120,7 +118,8 @@
       <div id="desc">
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
-          <span id="categoryTxt">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
+          <span id="categoryDesk">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
+          <span id="categoryMob">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
           <p id="descTxt"><br>Test description, words words words.</p>
         </p>
       </div>
