--- a/clear_save.html
+++ b/clear_save.html
@@ -40,7 +40,7 @@
           font-size: 3.2vw;
         }
 
-        #categoryMob {
+        #categoryTxt {
           font-size: 3vw;
           padding-left: 1.5vw;
           line-height: 4.7vw;
@@ -85,7 +85,7 @@
           font-size: 1.3vw;
         }
       
-        #categoryDesk {
+        #categoryTxt {
           font-size: 1.03vw;
           padding-left: 1vw;
         }
@@ -118,8 +118,7 @@
       <div id="desc">
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
-          <span id="categoryDesk">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
-          <span id="categoryMob">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
+          <span id="categoryTxt">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
           <p id="descTxt"><br>Test description, words words words.</p>
         </p>
       </div>
