--- a/clear_save.html
+++ b/clear_save.html
@@ -110,16 +110,17 @@
 
     <h2 id="name" style="line-height:0.1; color:#6975F7">Jose&nbsp</h2>
     <p id="parenthesis">(</p>
-    <a href="https://instagram.com/_jxse_._/">instagram</a>
+      <a href="https://instagram.com/_jxse_._/">instagram</a>
     <p id="parenthesis">)</p>
 
-    <!-- in pixels: 802px -->
     <div id="descContainer">
       <div id="desc">
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
-          <span id="categoryTxt">He's in the game as Jose! and he has ALWAYS seen a sailor in the middle of the moon</span>
-          <p id="descTxt"><br>Test description, words words words.</p>
+          <span id="categoryTxt">He's in the game as Jose!</span><br><br>
+           
+          <span id="categoryDef">Bio:</span><br>
+          <span id="categoryTxt">Evil shadow wizard.</span>
         </p>
       </div>
     </div>
@@ -127,9 +128,25 @@
     <!-- DIEGO -->
 
     <h2 id="name" style="color:#A04AF6"><br>ME.&nbsp&nbsp</h2>
-      <p id="parenthesis">(</p>
-        <a href="https://instagram.com/the_69th_random_person/">instagram,</a>
-        <a href="https://www.youtube.com/@the_person">youtube</a>
-      <p id="parenthesis">)</p>
+    <p id="parenthesis">(</p>
+      <a href="https://instagram.com/the_69th_random_person/">instagram,</a>
+      <a href="https://www.youtube.com/@the_person">youtube</a>
+    <p id="parenthesis">)</p>
+
+    <div id="descContainer">
+      <div id="desc">
+        <p id="descSep">
+          <span id="categoryDef">Credit:</span><br>
+          <span id="categoryTxt">
+            I'm myself in the game. I also did all of the programming for it.
+            Oh and uhhhhh I made this entire website and came up with the whole game.
+          </span><br><br>
+
+          <span id="categoryDef">Bio:</span><br>
+          <span id="categoryTxt">Evil shadow wizard 2.<span>
+        </p>
+      </div>
+    </div>
+
   </body>
 </html>
