--- a/complete.html
+++ b/complete.html
@@ -29,7 +29,7 @@
     </style>
 
     <title>Almonds Website?!?!</title>
-    <a style="" href="potd.html">obligatory easter egg on plain HTML site</a>
+    <a id="hidden" href="potd.html">obligatory easter egg on plain HTML site</a>
     <h3 style=" text-align: center;">Almonds</h3>
   </head>
 
