--- a/potd.html
+++ b/potd.html
@@ -8,14 +8,14 @@
     <style>
       @media only screen and (max-width: 414px) {
         #bruh {
-          font-size: 5vw
-          color: blue;
+          font-size: 1vw
+          text-align: center;
         }
       }
 
       @media only screen and (min-width: 415px) {
         #bruh {
-          font-size: 3vw;
+          font-size: 2.35vw;
         }
       }
     </style> 
