--- a/potd.html
+++ b/potd.html
@@ -8,8 +8,22 @@
     <style>
       @media only screen and (max-width: 414px) {
         #bruh {
-          font-size: 1vw
+          font-size: 2vw
           text-align: center;
+        }
+
+        #txtBig{
+          font-size: 0.5vw       
+        }
+
+        #txtMed{
+          font-size: 8px;
+          line-height: 0.3vw;
+        }
+
+        #txtSmol{
+          font-size: 4px;
+          line-height: 1.5vw;
         }
       }
 
@@ -17,13 +31,27 @@
         #bruh {
           font-size: 2.35vw;
         }
+        
+        #txtBig{
+          font-size: 1vw       
+        }
+
+        #txtMed{
+          font-size: 8px;
+          line-height: 0.3vw;
+        }
+
+        #txtSmol{
+          font-size: 4px;
+          line-height: 1.5vw;
+        }
       }
     </style> 
     <div style="border: 1.5px solid white; width: 50%; display: flex; justify-content: center; margin: auto;">
     <p id="bruh">Page of the Day!</p>
     </div>
   </head>
-
+  
   <body style="background-color:#1F2229; color:#FFFFFF">
   
     <div style="text-align: center">
