--- a/potd.html
+++ b/potd.html
@@ -55,9 +55,9 @@
   <body style="background-color:#1F2229; color:#FFFFFF">
   
     <div style="text-align: center">
-      <p style="line-height: 1vw">Click the link below, as it may hold the answers you're looking for...</p>
-      <p style="font-size:8px; line-height:0.3vw">...or just things the guy who made this site happens to like/find interesting</p>
-      <p style="font-size:4px; line-height:1.5vw">...or he just hates it idk</p>
+      <p id="txtBig">Click the link below, as it may hold the answers you're looking for...</p>
+      <p id="txtMed">...or just things the guy who made this site happens to like/find interesting</p>
+      <p id="txtSmol">...or he just hates it idk</p>
     </div>
     <!--
       <a href="https://www.therealzebos.com/goldenticket" target="_blank" title="such mystique, you must click!" style="color:#FFFFFF">the almighty link.</a>
