--- a/potd.html
+++ b/potd.html
@@ -13,16 +13,16 @@
         }
 
         #txtBig{
-          font-size: 0.5vw       
+          font-size: 2vw       
         }
 
         #txtMed{
-          font-size: 8px;
+          font-size: 1.5vw;
           line-height: 0.3vw;
         }
 
         #txtSmol{
-          font-size: 4px;
+          font-size: 1vw;
           line-height: 1.5vw;
         }
       }
@@ -33,7 +33,7 @@
         }
         
         #txtBig{
-          font-size: 1vw       
+          font-size: 1.3vw       
         }
 
         #txtMed{
