Jose Bio Update

--- a/clear_save.html
+++ b/clear_save.html
@@ -111,7 +111,7 @@
           <span id="categoryTxt">He's in the game as Jose!</span><br><br>
            
           <span id="categoryDef">Bio:</span><br>
-          <span id="categoryTxt">Evil shadow wizard.</span>
+          <span id="categoryTxt">Extremely successful bussinessman.</span>
         </p>
       </div>
     </div>
