--- a/clear_save.html
+++ b/clear_save.html
@@ -116,6 +116,23 @@
       </div>
     </div>
     
+    <!-- EDWARD -->
+
+    <a href="https://onlyfans.com/nikocadoavocado" id="name" style="text-decoration: none; color:#FE8FFF"><br>Edward</a>
+    <div id="descContainer">
+      <div id="desc">
+        <p id="descSep">
+          <span id="categoryDef">Credit:</span><br>
+          <span id="categoryTxt">
+            Evil shadow wizard in the game.
+          </span><br><br>
+
+          <span id="categoryDef">Bio:</span><br>
+          <span id="categoryTxt">Look ma, I'm famous!<span>
+        </p>
+      </div>
+    </div>
+    
     <!-- DIEGO -->
 
     <h2 id="name" style="color:#A04AF6"><br>ME.&nbsp&nbsp</h2>
@@ -138,6 +155,7 @@
         </p>
       </div>
     </div>
+
 
   </body>
 </html>
