Diego Bio Update

--- a/clear_save.html
+++ b/clear_save.html
@@ -151,7 +151,7 @@
           </span><br><br>
 
           <span id="categoryDef">Bio:</span><br>
-          <span id="categoryTxt">Evil shadow wizard 2.<span>
+          <span id="categoryTxt">Giving 1 collective dollar to the first 10 people who find the hidden link in here.<span>
         </p>
       </div>
     </div>
