--- a/clear_save.html
+++ b/clear_save.html
@@ -133,6 +133,23 @@
       </div>
     </div>
    
+    <!-- AIDAN -->
+
+    <h2 id="name" style="color:#3edab3"><br>Aidan</h2>
+    <div id="descContainer">
+      <div id="desc">
+        <p id="descSep">
+          <span id="categoryDef">Credit:</span><br>
+          <span id="categoryTxt">
+            The SHORT stopper!
+          </span><br><br>
+
+          <span id="categoryDef">Bio:</span><br>
+          <span id="categoryTxt">idk<span>
+        </p>
+      </div>
+    </div>
+    
     <!-- LOUIS -->
 
     <h2 id="name" style="color:#e30000"><br>Louis</h2>
@@ -141,7 +158,7 @@
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
           <span id="categoryTxt">
-            Some weird guy idk.
+            Some weird guy I think.
           </span><br><br>
 
           <span id="categoryDef">Bio:</span><br>
