--- a/pav.html
+++ b/pav.html
@@ -8,7 +8,7 @@
   
   <body>
     <div class="sendCont">
-      <div id="send"><p>Lorem ipsum</p></div>
+      <div id="send"><p>Hey</p></div>
     </div>
   </body>
 </html>
