geni comment update

--- a/geni.html
+++ b/geni.html
@@ -27,7 +27,7 @@
       }
     </style>
 
-    <title>Almonds Website?!?!</title>
+    <title>Does she?????</title>
     <h2 style="text-align: center; color: #C1E1C1">Does Genesis have Cancer?</h3>
   </head>
 
