meta tag updates

--- a/clear_save.html
+++ b/clear_save.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0"> 
+    <meta name="description" content="About the people and team behind Almonds">
+    <meta name="author" content="The69thRando, Jose, Edward, Aidan, Louis">
+    <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,About,Team,Crew">
+
+    <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <base target="_blank">
     <title>Meet Them All</title>
