--- a/geni.html
+++ b/geni.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Find out wether Geni has cancer or not.">
+    <meta name="author" content="The69thRando">
+    <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,Cancer,Chance,Geni,Genesis,Sega Genesis,Dead,Death">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <style>
