--- a/complete.html
+++ b/complete.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Almonds Demo website is under construction. Coming soon... -ish!">
+    <meta name="author" content="The69thRando">
+    <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,Coming Soon">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
 
