--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <!-- <meta name="viewport" content="width=device-width, intial-scale=1.0"> -->
     <meta charset="utf-8">
+    <meta name="description" content="The official website for the Almonds CLI Demo.">
+    <meta name="author" content="The69thRando">
+    <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,Prototype,CLI,python,python3">
+
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <title>You'll Get Your Nut Soon...</title>
     <h1 style="text-align: center; color:#FFFFFF">Coming soon...</h1>
   </head>
 
-  <body style="max-width: 100%; max-height: 0%;  ; background-color:#1F2229; color:#1F2229">
+  <body style="max-width: 100%; max-height: 0%; background-color:#1F2229; color:#1F2229">
     <div style="text-align:center">
       <a href="complete.html" style="text-decoration: none; line-height:32.0; color:#1F2229">for the impatient.</a>
     </div>
