--- a/pav.html
+++ b/pav.html
@@ -7,8 +7,10 @@
   </head>
   
   <body>
-    <div class="sendCont">
-      <div id="send"><p>Hey</p></div>
-    </div>
+
+    <div id="rec"><p>What's a Pavlina?</p></div>
+    <div id="rec"><p>Sounds like the name of a flower...</p></div>
+    <div id="rec"><p>Is it a flower??</p></div>
+      
   </body>
 </html>
