--- a/potd.html
+++ b/potd.html
@@ -3,50 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link rel="stylesheet" href="no_style.css">
+    <link rel="stylesheet" href="potd.css">
+
     <title>Ooh, what's this?</title>
-    <style>
-      @media only screen and (max-width: 414px) {
-        #bruh {
-          font-size: 2vw
-          text-align: center;
-        }
-
-        #txtBig{
-          font-size: 2vw       
-        }
-
-        #txtMed{
-          font-size: 1.5vw;
-          line-height: 0.3vw;
-        }
-
-        #txtSmol{
-          font-size: 1vw;
-          line-height: 1.5vw;
-        }
-      }
-
-      @media only screen and (min-width: 415px) {
-        #bruh {
-          font-size: 2.35vw;
-        }
-        
-        #txtBig{
-          font-size: 1.3vw       
-        }
-
-        #txtMed{
-          font-size: 8px;
-          line-height: 0.3vw;
-        }
-
-        #txtSmol{
-          font-size: 4px;
-          line-height: 1.5vw;
-        }
-      }
-    </style> 
     <div style="border: 1.5px solid white; width: 50%; display: flex; justify-content: center; margin: auto;">
     <p id="bruh">Page of the Day!</p>
     </div>
