--- a/clear_save.html
+++ b/clear_save.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,About,Team,Crew">
 
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link rel="stylesheet" href="no_style.css">
+    <link rel="stylesheet" href="clear_save.css">
     <base target="_blank">
     <title>Meet Them All</title>
 
