remove html extension

--- a/complete.html
+++ b/complete.html
@@ -33,7 +33,7 @@
     </style>
 
     <title>Almonds Website?!?!</title>
-    <a id="hidden" href="potd.html">obligatory easter egg on plain HTML site</a>
+    <a id="hidden" href="https://almonds-game.github.io/potd">obligatory easter egg on plain HTML site</a>
     <h3 style=" text-align: center;">Almonds</h3>
   </head>
 
@@ -44,7 +44,7 @@
         
         <ul>
           <li><a href="downloads/Almonds_Demo_101.zip" download="Almonds_Demo_100">1.&nbsp;New Game<br></a></li>
-          <li><a href="clear_save.html">2. Clear Save<br></a></li>
+          <li><a href="https://almonds-game.github.io/clear_save">2. Clear Save<br></a></li>
           <li><a href="https://discord.com/invite/8NyNWJcfHA">3.&nbsp;Quit<br></a><li>
         </ul>
         <!-- 1: 3.5%  2: 2.1%  3: 6.4%-->
