--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body style="max-width: 100%; max-height: 0%; background-color:#1F2229; color:#1F2229">
     <div style="text-align:center">
-      <a href="complete.html" style="text-decoration: none; line-height:32.0; color:#1F2229">for the impatient.</a>
+      <a href="https://almonds-game.github.io/complete" style="text-decoration: none; line-height:32.0; color:#1F2229">for the impatient.</a>
     </div>
 
       <!-- have you ever seen a sailor in the middle of the moon? -->
