--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="no_style.css">
+    <link type="text/css" rel="stylesheet" href="https://almonds-game.github.io/no_style.css">
     <title>Where the hell.</title>
   </head>
   <body>
