move link seletion to JS file

--- a/potd.html
+++ b/potd.html
@@ -21,21 +21,7 @@
     <!--
       <a href="https://www.therealzebos.com/goldenticket" target="_blank" title="such mystique, you must click!" style="color:#FFFFFF">the almighty link.</a>
       -->
-    <script type="text/javascript">
-      function sorpresa(){
-        const links = [
-          "https://www.therealzebos.com/goldenticket", 
-          "https://milk.com",
-          "https://searx.be",
-          "https://www.youtube.com/watch?v=djD9fSSqXeA",
-          "https://youtu.be/CkFeggecUiQ",
-          "https://www.youtube.com/watch?v=AjnV0OtIM5g",
-          "https://www.youtube.com/watch?v=EiESJHCcWRs&list=PLA0MyOqG7qq-He0VScSKU7CS7NPRNU4fJ"];
-        var d = new Date();
-        var day = d.getDay();
-        window.open(links[day], "_blank");
-      }
-    </script>
+    <script src="linkSel.js"></script>
     <div style="display: flex; justify-content: center; padding-top: 13%">
       <a href="" onclick="javascript:sorpresa();" title="such mystique, you must click!"><span style="color:#FFFFFF; text-decoration: underline;">the almighty link.</span></a>
     </div>
