EDWARD IS A FURRY

--- a/clear_save.html
+++ b/clear_save.html
@@ -37,13 +37,13 @@
     
     <!-- EDWARD -->
 
-    <a href="https://onlyfans.com/nikocadoavocado" id="name" style="text-decoration: none; color:#FE8FFF"><br>Edward</a>
+    <a href="https://onlyfans.com/nikocadoavocado" id="name" style="text-decoration: none; color:#FE8FFF"><br>Edward "YiffMaster"</a>
     <div id="descContainer">
       <div id="desc">
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
           <span id="categoryTxt">
-            Evil shadow wizard in the game.
+            Evil shadow wizard in the game. Known to his furry kin as Edward the YiffMaster.
           </span><br><br>
 
           <span id="categoryDef">Bio:</span><br>
