--- a/geni.html
+++ b/geni.html
@@ -43,8 +43,8 @@
 
   <!-- But does it really truly matter?                                                        -->
   <!-- I mean I say you should live life regardless of how it'll end.                          -->
-  <!-- I mean you and I will never in our lifetime discover or understand the meaning of life. -->
-  <!-- You'll sleep soundly keeping this in mind:                                              -->
+  <!-- You and I will never, in our time, discover or understand the meaning of life.          -->
+  <!-- So, You'll sleep soundly keeping this in mind:                                          -->
   <!-- Everything goes with the passage of time                                                -->
   <!-- So wether it's: ...                                                                     -->
   <!-- ... Cancer ...     -->
