--- a/clear_save.html
+++ b/clear_save.html
@@ -44,6 +44,9 @@
           <span id="categoryDef">Credit:</span><br>
           <span id="categoryTxt">
             Evil shadow wizard in the game. Known to his furry kin as Edward the YiffMaster.
+          </span>
+          <span id="categoryTxt">
+            Edward the YiffMaster
           </span><br><br>
 
           <span id="categoryDef">Bio:</span><br>
@@ -100,11 +103,16 @@
           <span id="categoryDef">Credit:</span><br>
           <span id="categoryTxt">
             I'm myself in the game. I also did all of the programming for it.
-            Oh and uhhhhh I made this entire website and came up with the whole game.
+          </span>
+          <br> 
+          <span id="categoryTxt">
+            Oh and uhhhhh I made this entire website and came up with the game.
           </span><br><br>
 
           <span id="categoryDef">Bio:</span><br>
-          <span id="categoryTxt">Giving 1 collective dollar to the first 10 people who find the hidden link in here.<span>
+          <span id="categoryTxt">Giving 1 collective dollar to the first 10 people who find the hidden<span>
+          <br>
+          <span id="categoryTxt">link in here.</span>
         </p>
       </div>
     </div>
