--- a/clear_save.html
+++ b/clear_save.html
@@ -43,8 +43,9 @@
         <p id="descSep">
           <span id="categoryDef">Credit:</span><br>
           <span id="categoryTxt">
-            Evil shadow wizard in the game. Known to his furry kin as Edward the YiffMaster.
+            Evil shadow wizard in the game. Known to his furry kin as
           </span>
+          <br>
           <span id="categoryTxt">
             Edward the YiffMaster
           </span><br><br>
