--- a/clear_save.html
+++ b/clear_save.html
@@ -113,7 +113,7 @@
           <span id="categoryDef">Bio:</span><br>
           <span id="categoryTxt">Giving 1 collective dollar to the first 10 people who find the hidden<span>
           <br>
-          <span id="categoryTxt">link in here.</span>
+          <span id="categoryTxt">link in this page.</span>
         </p>
       </div>
     </div>
