almonds-favicon.png

--- a/clear_save.html
+++ b/clear_save.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,About,Team,Crew">
 
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/almonds-favicon.png">
     <link rel="stylesheet" href="clear_save.css">
     <base target="_blank">
     <title>Meet Them All</title>
