--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,Prototype,CLI,python,python3">
 
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/almonds-favicon.png">
     <link rel="stylesheet" href="no_style.css">
     <title>You'll Get Your Nut Soon...</title>
     <h1 style="text-align: center; color:#FFFFFF">Coming soon...</h1>
