--- a/potd.html
+++ b/potd.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/almonds-favicon.png">
     <link rel="stylesheet" href="potd.css">
 
     <title>Ooh, what's this?</title>
