--- a/complete.html
+++ b/complete.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,Coming Soon">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="img/almonds-favicon.png">
     <link rel="stylesheet" href="no_style.css">
 
     <style>
