--- a/geni.html
+++ b/geni.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Almond,Almonds,Demo,Game,RPG,Cancer,Chance,Geni,Genesis,Sega Genesis,Dead,Death">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/geni-favicon.png">
     <link rel="stylesheet" href="no_style.css">
     <style>
       div {
