add period edwrd bio, important

--- a/clear_save.html
+++ b/clear_save.html
@@ -48,7 +48,7 @@
           </span>
           <br>
           <span id="categoryTxt">
-            Edward the YiffMaster
+            Edward the YiffMaster.
           </span><br><br>
 
           <span id="categoryDef">Bio:</span><br>
