--- a/clear_save.html
+++ b/clear_save.html
@@ -96,7 +96,8 @@
     <h2 id="name" style="color:#A04AF6"><br>ME.&nbsp&nbsp</h2>
     <p id="parenthesis">(</p>
       <a href="https://instagram.com/the_69th_random_person/">instagram,</a>
-      <a href="https://www.youtube.com/@the_person">youtube</a>
+      <a href="https://www.youtube.com/@the_person">youtube,</a>
+      <a href="https://tilde.town/~the69thrando">tilde.town</a>
     <p id="parenthesis">)</p>
 
     <div id="descContainer">
