replace IDs with class clear_save.html

--- a/snail.html
+++ b/snail.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, intial-scale=1.0">
     <link rel="stylesheet" href="no_style.css">
     <title>IDIOT</title>
-    <h2 style="text-align: center; color:#FFFFFF">YOU'RE DUMB AND AND AND STUPID</h2>
+    <h2 style="text-align: center; color:#FFF">YOU'RE DUMB AND AND AND STUPID</h2>
   </head>
-    <h2 style="text-align: center;">caca head.</h2>
-    <p style="text-align: center;"><br><br><br>you're just mad i'm the awesome cat...</p>
+  <h2 style="text-align: center;">CACA <span style="color: #FFF">head.</h2>
+  <p style="text-align: center;"><br><br><br>you're just mad i'm the awesome cat...</p>
     <!-- have you ever seen a sailor in the middle of the moon? -->
     <!-- I've never. -->
 
