fix colors clear_save.css

--- a/clear_save.html
+++ b/clear_save.html
@@ -19,7 +19,7 @@
 
     <!-- JOSE -->
 
-    <h2 class="name" style="line-height:0.1; color:#6975F7">Jose&nbsp;</h2>
+    <h2 class="name" style="line-height:0.1; color:#6975F7">Jose&nbspnbsp;;</h2>
     <p class="parenthesis">(</p>
       <a href="https://instagram.com/_jxse_._/">instagram</a>
     <p class="parenthesis">)</p>
@@ -86,14 +86,14 @@
           </span><br><br>
 
           <span class="categoryDef">Bio:</span><br>
-          <span class="categoryTxt">Exists.<span>
+          <span class="categoryTxt">Exists.</span>
         </p>
       </div>
     </div>
     
     <!-- DIEGO -->
 
-    <h2 class="name" style="color:#A04AF6"><br>ME.&nbsp&nbsp</h2>
+    <h2 class="name" style="color:#A04AF6"><br>ME.&nbsp;nbsp;&nbsp;nbsp;</h2>
     <p class="parenthesis">(</p>
       <a href="https://instagram.com/the_69th_random_person/">instagram,</a>
       <a href="https://www.youtube.com/@the_person">youtube,</a>
