--- a/clear_save.html
+++ b/clear_save.html
@@ -19,7 +19,7 @@
 
     <!-- JOSE -->
 
-    <h2 class="name" style="line-height:0.1; color:#6975F7">Jose&nbspnbsp;;</h2>
+    <h2 class="name" style="line-height:0.1; color:#6975F7">Jose&nbsp;</h2>
     <p class="parenthesis">(</p>
       <a href="https://instagram.com/_jxse_._/">instagram</a>
     <p class="parenthesis">)</p>
