--- a/clear_save.html
+++ b/clear_save.html
@@ -93,7 +93,7 @@
     
     <!-- DIEGO -->
 
-    <h2 class="name" style="color:#A04AF6"><br>ME.&nbsp;nbsp;&nbsp;nbsp;</h2>
+    <h2 class="name" style="color:#A04AF6"><br>ME.&nbsp;&nbsp;</h2>
     <p class="parenthesis">(</p>
       <a href="https://instagram.com/the_69th_random_person/">instagram,</a>
       <a href="https://www.youtube.com/@the_person">youtube,</a>
