--- a/clear_save.html
+++ b/clear_save.html
@@ -16,6 +16,8 @@
   </head>
   
   <body>
+  <div style="border: 0px;">
+
     <!-- JOSE -->
 
     <h2 class="name" style="line-height:0.1; color:#6975F7">Jose&nbsp;</h2>
@@ -37,7 +39,7 @@
     
     <!-- EDWARD -->
 
-    <a href="https://onlyfans.com/nikocadoavocado" class="name" style="text-decoration: none; color:#FE8FFF"><br>Edward "YiffMaster"</a>
+    <a href="https://onlyfans.com/nikocadoavocado" class="name" style="background: transparent; text-decoration: none; color:#FE8FFF"><br>Edward "YiffMaster"</a>
     <div class="descContainer">
       <div class="desc">
         <p class="descSep">
@@ -57,7 +59,7 @@
     </div>
    
     <!-- AIDAN -->
-
+    
     <h2 class="name" style="color:#3edab3"><br>Aidan</h2>
     <div class="descContainer">
       <div class="desc">
@@ -118,7 +120,8 @@
         </p>
       </div>
     </div>
-
+  
+  </div>
   </body>
 </html>
 
