--- a/potd.html
+++ b/potd.html
@@ -13,7 +13,7 @@
   </head>
   
   <body style="background-color:#1F2229; color:#FFFFFF">
-  
+    <div> 
     <div style="text-align: center">
       <p id="txtBig">Click the link below, as it may hold the answers you're looking for...</p>
       <p id="txtMed">...or just things the guy who made this site happens to like/find interesting</p>
@@ -22,7 +22,8 @@
     
     <script src="linkSel.js"></script>
     <div style="display: flex; justify-content: center; padding-top: 13%">
-      <a href="" onclick="javascript:sorpresa();" title="such mystique, you must click!"><span style="color:#FFFFFF; text-decoration: underline;">the almighty link.</span></a>
+      <a href="" onclick="javascript:sorpresa();" title="such mystique, you must click!"><span style="text-decoration: underline;">the almighty link.</span></a>
     </div>
-    </body>
+    </div>
+  </body>
 </html>
